fix stupid overlap

--- a/fun.css
+++ b/fun.css
@@ -66,7 +66,7 @@ h3 {
   display: grid;
   grid-template-columns: 200px 1fr 250px;
   background-color: #CFCFCF;
-  padding: 4px;
+  padding: 8px;
   width: 100%;
   border-radius: 30px;
   border: 2px solid #41536b;
@@ -167,6 +167,7 @@ h3 {
   border-bottom: 4px solid #0005;
   padding: 8px;
   box-shadow: 0 5px 5px #0005;
+  border-bottom-right-radius: 28px;
 }
 
 .gifs h1 {
@@ -195,6 +196,8 @@ h3 {
   border-bottom: 4px solid #0005;
   /* box-shadow: 0 -1px 4px #0005; */
   margin-top: 4px;
+  border-bottom-right-radius: 6px;
+  margin-right: 10px;
 }
 
 .updates ul a {
@@ -213,6 +216,7 @@ h3 {
   border-top: 4px solid #FFF5;
   border-right: 4px solid #0005;
   border-bottom: 4px solid #0005;
+  height: min-content;
   /* border: 8px outset #4EC79E; */
   padding: 8px;
   box-shadow: 0 5px 5px #0005;
